# OOP_Galagan_V.10

./: CMakeLists.txt  Makefile  Menu.cpp  Menu.h  README.md  a.out  b_n_r.sh  build_n_run.sh  crossing_station.cpp  crossing_station.h  description.txt  extern.cpp  fast_build_n_run.sh  g_bnr.sh  getlines.cpp  line.cpp  line.h  main  main.cpp  main.py  new_bnr.sh  railway_system.cpp  railway_system.h  result.out  span.cpp  span.h  station.cpp  station.h  test  test.cpp  tests.cpp  tests.h  timatable.cpp  timatable.h  timetable.cpp  timetable.h  to_shared.sh
Saves/: State.json  timetable_1.json  timetable_2.json  timetable_3.json  timetable_4.json  timetable_5.json  timetable_6.json  timetable_7.json  timetable_8.json
test_dir/: main.cpp
tests/: CrossingStation_test.h  Line_test.h  Station_test.h  Timetable_test.h
